# camden

./: .env.example  .envrc.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MODERATION-DEBUGGING.md  ModelRegistryRewrite.md  PLAN-AI-CLASSIFICATION.md  PLAN.md  README.md  RESPONSIVE_GRID_SUMMARY.md  TODO.md  UX_IMPROVEMENTS_REPORT.md  VERSION.toml  build.rs  build_rs_cov.profraw  camden-classifier-ensemble.toml  camden-classifier-single.toml  camden-classifier.example.toml  tarpaulin_output.txt  taskfile.yaml
.claude/: settings.local.json  subagent-workflow.md
.claude/agents/: explore-agent.md  junior-dev.md  qa-agent.md  seasoned-dev.md  senior-dev.md
.cursor/rules/: rust.mdc  taskfile.mdc
camden-frontend/: Cargo.toml  build.rs
camden-frontend/src/: main.rs
camden-frontend/ui/: main.slint
camden-frontend/ui/components/: badge.slint  filter-sidebar.slint  photo-card.slint  preview-modal.slint  progress-bar.slint  tab-bar.slint  theme.slint  zoom-slider.slint
camden-frontend/ui/views/: duplicates-view.slint  gallery-view.slint  scan-view.slint  settings-view.slint
core/: Cargo.toml
core/src/: aspect_ratio.rs  detector.rs  lib.rs  operations.rs  progress.rs  rename.rs  reporting.rs  resolution.rs  scanner.rs  snapshot.rs  thumbnails.rs
core/src/classifier/: config.rs  ensemble.rs  labels.rs  mod.rs  moderation.rs  runtime.rs  tagging.rs
core/src/classifier/models/: mod.rs  moderation.rs  tagging.rs
core/src/classifier/moderation/: interpreter.rs  mod.rs
docs/: AI-MODELS.md  ENSEMBLE-MODELS.md  PLAN-MULTI-MODEL-CLASSIFICATION.md  SETUP-WINDOWS.md  UX-REWRITE-PLAN.md
scripts/: convert_hf_to_onnx.py  wsl-task.sh
src/: cli.rs  detector.rs  main.rs  operations.rs  reporting.rs  scanner.rs
taskfiles/: build.yaml  deps.yaml  opencv.yaml  version.yaml
