[package]
name = "camden-frontend"
version = "0.1.3"
edition = "2024"

[dependencies]
camden-core = { path = "../core" }
slint = { version = "1.5", features = ["renderer-software"] }
indicatif = "0.17"
dirs = "5"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.5"
