[package]
name = "camden-core"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.3"
opencv = { version = "0.97", default-features = false, features = ["imgcodecs", "imgproc"] }
rayon = "1.5"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.2"
kamadak_exif = { package = "kamadak-exif", version = "0.5" }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
tempfile = "3"

