[package]
name = "camden-core"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.3"
opencv = { version = "0.97", default-features = false, features = ["imgcodecs", "imgproc"] }
rayon = "1.5"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3.2"
kamadak_exif = { package = "kamadak-exif", version = "0.5" }
uuid = { version = "1.0", features = ["v4"] }
regex = "1"
once_cell = "1"
time = { version = "0.3", features = ["formatting"] }
dirs = "5"
crossbeam-channel = { version = "0.5", optional = true }
jwalk = { version = "0.8", optional = true }

# AI Classification dependencies
# Using load-dynamic to avoid CRT conflicts with static OpenCV
ort = { version = "2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"], optional = true }
ndarray = { version = "0.16", optional = true }
toml = { version = "0.8", optional = true }

[features]
default = ["classification"]
experimental-threading = ["dep:crossbeam-channel", "dep:jwalk"]
classification = ["dep:ort", "dep:ndarray", "dep:toml"]

[dev-dependencies]
tempfile = "3"

